sequences.
----------------------------------------------------------------------
Fri Nov 28 09:04:49 2003                        Michael Jennings (mej)

Changes for compatibility with newer LibAST.
----------------------------------------------------------------------
Tue Dec  9 22:26:17 2003                        Michael Jennings (mej)

Add libast libs to GRLIBS.

Hopefully fixed Etbg_update_list to be Solaris /bin/sh-friendly.
----------------------------------------------------------------------
Sun Dec 21 21:43:58 2003                        Michael Jennings (mej)

Fix :hscale and :vscale to work properly.
----------------------------------------------------------------------
Mon Dec 22 13:39:02 2003                        Michael Jennings (mej)

These two are going away.
----------------------------------------------------------------------
Mon Dec 22 15:40:43 2003                        Michael Jennings (mej)

That too.
----------------------------------------------------------------------
Mon Dec 22 15:50:35 2003                        Michael Jennings (mej)

Minor tweaks to utils/Etbg_update_list.
----------------------------------------------------------------------
Mon Dec 22 15:56:51 2003                        Michael Jennings (mej)

Backported changes to menu generation.
----------------------------------------------------------------------
Wed Jan  7 15:08:24 2004                        Michael Jennings (mej)

Disable build-time check for screen.
----------------------------------------------------------------------
Sun Jan 11 17:09:07 2004                        Michael Jennings (mej)

It's too bad you can't just say, "Copyright 1997-2999."
----------------------------------------------------------------------
Mon Jan 19 21:02:30 2004                        Michael Jennings (mej)

Patch from David Lloyd <dmlloyd@tds.net> for overstrike support.
----------------------------------------------------------------------